# sonar

./: CMakeLists.txt  README.md  otfbuild.sh
inc/: config.h  globals.h  make_unique.h  otf_handler.h  otf_handler_sonar.h  otf_manager.h  trace_stats.h  trace_visualizer.h
sampletraces/: lulesh_8p.0.def.z  lulesh_8p.1.events.z  lulesh_8p.2.events.z  lulesh_8p.3.events.z  lulesh_8p.4.events.z  lulesh_8p.5.events.z  lulesh_8p.6.events.z  lulesh_8p.7.events.z  lulesh_8p.8.events.z  lulesh_8p.thumb
src/: config.cpp  main.cpp  otf_manager.cpp  trace_stats.cpp  trace_visualizer.cpp
